--- a/css/isi_subtopik.css
+++ b/css/isi_subtopik.css
@@ -14,12 +14,17 @@
             text-align:justify;
         }
 
-        .pagination button {
-            margin: 5px;
+        .agination .nav-button {
+            margin-top: vw;
             cursor: pointer;
         }
+
+        .pagination .btn-pagination {
+            margin-top: 2vw;
+            cursor: pointer;
+        }
+
         .pagination .nav-button {
-            font-size: 20px; /* Ukuran font untuk memperbesar */
             font-weight: bold; /* Membuat tombol tebal */
         }
         .pagination .active-button {
@@ -36,16 +41,10 @@
         
         .btn-pagination{
             width:8vw; 
-            height:1vw; 
+            height:10px; 
             border-radius:5vw;
         }
         
-        .container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin-top: 20px;
-        }
         .question {
             font-size: 1.5em;
             margin-bottom: 10px;
@@ -115,10 +114,6 @@
             background-color: #0056b3;
         }
         
-        .svg{
-            ackground-color:blue;
-        }
-        
         .pembungkus-content{
               display:grid; 
               grid-template-columns:1fr 1fr; 
@@ -129,6 +124,6 @@
               margin-top:4vw;
           }
           
-          #materi p{
-              font-size:2vw;
-          }
+          .pembungkus-content p{
+            font-size: 200px;
+        }
