--- a/css/button.css
+++ b/css/button.css
@@ -8,6 +8,12 @@
   background-color: #89622B;  
   border-color: #89622B; 
 }
+.btn-outline-utbk-s {
+  color: #fff;  
+  background-color: #89622B;  
+  border-color: #89622B; 
+}
+
 .btn-outline-mtk {
   color: #793738;  
   border-color: #793738;  
@@ -17,6 +23,12 @@
   background-color: #793738;  
   border-color: #793738; 
 }
+.btn-outline-mtk-s {
+  color: #fff;  
+  background-color: #793738;  
+  border-color: #793738; 
+}
+
 .btn-outline-bing {
   color: #375679;  
   border-color: #375679;  
@@ -26,6 +38,12 @@
   background-color: #375679;  
   border-color: #375679; 
 }
+.btn-outline-bing-s {
+  color: #fff;  
+  background-color: #375679;  
+  border-color: #375679; 
+}
+
 .btn-outline-dp {
   color: #6C3779;  
   border-color: #6C3779;  
@@ -35,11 +53,22 @@
   background-color: #6C3779;  
   border-color: #6C3779; 
 }
+.btn-outline-dp-s {
+  color: #fff;  
+  background-color: #6C3779;  
+  border-color: #6C3779; 
+}
+
 .btn-outline-on {
   color: #6A7937;  
   border-color: #6A7937;  
 }
 .btn-outline-on:hover {
+  color: #fff;  
+  background-color: #6A7937;  
+  border-color: #6A7937; 
+}
+.btn-outline-on-s {
   color: #fff;  
   background-color: #6A7937;  
   border-color: #6A7937; 
@@ -54,6 +83,12 @@
   background-color: #377939;  
   border-color: #377939; 
 }
+.btn-outline-off-s {
+  color: #fff;  
+  background-color: #377939;  
+  border-color: #377939; 
+}
+
 .box1{
   max-height: 400px;
   max-width: 500px;
