--- a/css/isi_subtopik.css
+++ b/css/isi_subtopik.css
@@ -1,72 +1,88 @@
-.content {
-            display: none; /* Default sembunyikan semua konten */
-
+html,
+        body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
         }
-        
+
+        .header img {
+            width: 150vw;
+        }
+
+        body {
+            min-height: 100vh;
+            margin: 0;
+            padding: 0;
+        }
+
+        .content {
+            display: none;
+            /* Default sembunyikan semua konten */
+        }
+
         .active {
             display: grid;
             place-items: center;
         }
 
-        .active p{
-            margin-top:5vw;
-            font-size:3vw;
-            text-align:justify;
-        }
-
-        .agination .nav-button {
-            margin-top: vw;
-            cursor: pointer;
-        }
-
-        .pagination .btn-pagination {
-            margin-top: 2vw;
-            cursor: pointer;
+        .active p {
+            margin-top: 5vw;
+            font-size: 3vw;
+            text-align: justify;
         }
 
         .pagination .nav-button {
-            font-weight: bold; /* Membuat tombol tebal */
+            font-weight: bold;
+            /* Membuat tombol tebal */
         }
+
         .pagination .active-button {
-            background-color:#1EA2F6;
-            color: white; /* Warna teks tombol aktif */
+            background-color: #1EA2F6;
+            color: white;
+            /* Warna teks tombol aktif */
             border: none;
         }
 
         .pagination button:not(.active-button) {
-            background-color: #5D81AB; /* Warna highlight untuk halaman aktif */
-            color: white; /* Warna teks tombol aktif */
+            background-color: #5D81AB;
+            /* Warna highlight untuk halaman aktif */
+            color: white;
+            /* Warna teks tombol aktif */
             border: none;
         }
-        
-        .btn-pagination{
-            width:8vw; 
-            height:10px; 
-            border-radius:5vw;
+
+        .btn-pagination {
+            width: 8vw;
+            height: 10px;
+            border-radius: 5vw;
         }
-        
+
         .question {
             font-size: 1.5em;
             margin-bottom: 10px;
         }
+
         .answer-slot {
             display: flex;
             margin-top: 10px;
         }
-        .answer-slot div, .choices div {
-            padding: 10px;
-            margin: 5px;
-            border: 2px solid #6578B2;
-            border-radius: 5px;
-            cursor: pointer;
-        }
+
         .choices {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
             margin-top: 20px;
         }
-        
+
+        .answer-slot div,
+        .choices div {
+            padding: 10px;
+            margin: 5px;
+            border: 2px solid #6578B2;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
         ul {
             list-style-type: none;
             padding: 0;
@@ -79,10 +95,10 @@
             margin: 5px 0;
             font-size: 1em;
             cursor: pointer;
-            
+
             border: 1px solid #ccc;
             border-radius: 5px;
-            
+
         }
 
         .pernyataan:hover {
@@ -90,7 +106,8 @@
         }
 
         .benar {
-            background-color: #4CAF50; /* Hijau */
+            background-color: #4CAF50;
+            /* Hijau */
             color: white;
         }
 
@@ -113,17 +130,216 @@
         #lanjut a:hover {
             background-color: #0056b3;
         }
-        
-        .pembungkus-content{
-              display:grid; 
-              grid-template-columns:1fr 1fr; 
-              gap:3vw;
-          }
-          
-          #materi img{
-              margin-top:4vw;
-          }
-          
-          .pembungkus-content p{
+
+        .pembungkus-content {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 3vw;
+        }
+
+        #materi img {
+            margin-top: 4vw;
+        }
+
+        .pembungkus-content p {
             font-size: 200px;
+        }
+
+        .main {
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .top-element {
+            flex: 1;
+        }
+
+        /* Gaya global */
+        .header-container {
+            margin: 0;
+            padding: 1vw 0;
+        }
+
+        .header-content {
+            display: grid;
+            grid-template-columns: 1fr 3fr;
+            gap: 5vw;
+            align-items: center;
+            max-width: 100%;
+            height: 10vh;
+        }
+
+        /* Gaya untuk elemen gambar */
+        .navbar-brand {
+            margin-left: 8vw;
+        }
+
+        .responsive-img {
+            width: 12vw;
+            height: auto;
+        }
+
+        /* Gaya untuk teks */
+        .responsive-text {
+            color: #4D62A5;
+            font-size: 1.5vw;
+            margin: 0;
+            margin-left: 3vw;
+        }
+
+        .section-container {
+            width: 100vw;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 2vw;
+            /* Menambahkan jarak antar elemen */
+            padding: 0;
+        }
+
+        .btn-close {
+            font-size: 1vw;
+        }
+
+        .nav-button {
+            font-size: 3vw;
+        }
+
+        .hint-btn {
+            font-size: 1.5vw;
+        }
+
+        .isi-subtopik {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            padding: 0;
+        }
+
+        .content img {
+            width: 30vw;
+        }
+
+        .isi-subtopik p {
+            font-size: 20px;
+        }
+
+        footer {
+            background-color: #1F2844;
+            width: 100%;
+            padding: 1vw;
+            text-align: center;
+            display: grid;
+            grid-template-columns: 3fr 1fr;
+            align-items: center;
+            gap: 5vw;
+        }
+
+        #petunjuk {
+            margin-top: 1vw;
+            text-align: center;
+            display: flex;
+            gap: 1vw;
+            justify-content: center;
+        }
+
+        #lanjut-btn {
+            height: fit-content;
+            width: 10vw;
+            background-color: #1EA2F6;
+            margin-top: 7px;
+        }
+
+        @media (max-width: 1000px) {
+            header .container {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 2vw;
+                padding: 2vw;
+            }
+
+            .header-content {
+                display: flex;
+                align-items: center;
+                max-width: 100%;
+                height: 9vh;
+            }
+
+            .navbar-brand {
+                display: none;
+            }
+
+            .responsive-text {
+                color: #4D62A5;
+                font-size: 3.7vw;
+                /* Ukuran font adaptif */
+                text-align: center;
+                margin: auto;
+            }
+
+            .section-container {
+                height: 8vh;
+                display: flex;
+                justify-content: center;
+                gap: 1vw;
+            }
+
+            .btn-close {
+                margin-bottom: 0.8vh;
+                font-size: 3vw;
+            }
+
+            .hint-btn {
+                font-size: 4vw;
+            }
+
+            .nav-button {
+                font-size: 6vw;
+            }
+
+            .btn-pagination {
+                width: 8vw;
+                height: 1vh;
+                border-radius: 7vw;
+            }
+
+            .pagination {
+                margin-top: 1vh;
+            }
+
+            .isi-subtopik {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .isi-subtopik img {
+                width: 70vw;
+            }
+
+            .isi-subtopik p {
+                font-size: 4.5vw;
+            }
+
+            footer {
+                height: 10vh;
+                align-items: center;
+            }
+
+            #petunjuk {
+                font-size: 3vw;
+                margin-left: 3vw;
+            }
+
+            #lanjut-btn {
+                height: 4vh;
+                width: 20vw;
+                background-color: #1EA2F6;
+                font-size: 3vw;
+            }
+
+            .content img {
+                width: 70vw;
+            }
         }
