--- a/css/materi_bc.css
+++ b/css/materi_bc.css
@@ -49,8 +49,9 @@
 }
 
 .inner-box.selected-topik {
+  display: none;
   background-color: #375679;
-  width: 30vw;
+  max-width: 70%;
   margin-right: 3vw;
   display: flex;
   align-items: center;
