--- a/css/isi_subtopik.css
+++ b/css/isi_subtopik.css
@@ -9,12 +9,6 @@ html,
             width: 150vw;
         }
 
-        body {
-            min-height: 100vh;
-            margin: 0;
-            padding: 0;
-        }
-
         .content {
             display: none;
             /* Default sembunyikan semua konten */
@@ -58,7 +52,7 @@ html,
         }
 
         .question {
-            font-size: 1.5em;
+            font-size: 1.2em;
             margin-bottom: 10px;
         }
 
@@ -146,9 +140,10 @@ html,
         }
 
         .main {
-            min-height: 100vh;
+            min-height: 100%;
             display: flex;
             flex-direction: column;
+            margin: 0;
         }
 
         .top-element {
@@ -167,7 +162,7 @@ html,
             gap: 5vw;
             align-items: center;
             max-width: 100%;
-            height: 10vh;
+            height: 5vh;
         }
 
         /* Gaya untuk elemen gambar */
@@ -189,13 +184,14 @@ html,
         }
 
         .section-container {
-            width: 100vw;
+            width: 100%;
             display: flex;
             align-items: center;
             justify-content: center;
             gap: 2vw;
             /* Menambahkan jarak antar elemen */
             padding: 0;
+            height: 100%;
         }
 
         .btn-close {
@@ -204,6 +200,9 @@ html,
 
         .nav-button {
             font-size: 3vw;
+            margin-bottom: 1.2vh;
+            padding: 0;
+            font-weight: bold;
         }
 
         .hint-btn {
@@ -236,66 +235,75 @@ html,
         }
 
         #petunjuk {
-            margin-top: 1vw;
             text-align: center;
             display: flex;
             gap: 1vw;
             justify-content: center;
+            background-color: #1F2844;
         }
 
         #lanjut-btn {
-            height: fit-content;
             width: 10vw;
             background-color: #1EA2F6;
-            margin-top: 7px;
         }
 
-        @media (max-width: 1000px) {
+        #nav-soal{
+            background-color: #375679; 
+            display: flex;
+            flex-direction: column; 
+            justify-content: center; 
+            align-items: center;
+            height: 8vh;
+        }
+        
+        @media (max-width: 600px) { /* 1000 kalau mau bagus di hp*/
             header .container {
                 display: flex;
                 flex-direction: column;
                 align-items: center;
                 gap: 2vw;
-                padding: 2vw;
             }
 
             .header-content {
                 display: flex;
                 align-items: center;
                 max-width: 100%;
-                height: 9vh;
             }
 
             .navbar-brand {
                 display: none;
             }
 
+            #nav-soal{
+                height: 6vh;
+            }
+
             .responsive-text {
                 color: #4D62A5;
-                font-size: 3.7vw;
+                font-size: 2.5vw;
                 /* Ukuran font adaptif */
                 text-align: center;
                 margin: auto;
             }
 
             .section-container {
-                height: 8vh;
                 display: flex;
                 justify-content: center;
                 gap: 1vw;
             }
 
             .btn-close {
-                margin-bottom: 0.8vh;
-                font-size: 3vw;
+                margin-top: 1vh;
+                font-size: 2vw;
             }
 
             .hint-btn {
-                font-size: 4vw;
+                font-size: 2.5vw;
             }
 
             .nav-button {
-                font-size: 6vw;
+                font-size: 5vw;
+                margin-bottom: 1vh;
             }
 
             .btn-pagination {
@@ -304,27 +312,20 @@ html,
                 border-radius: 7vw;
             }
 
-            .pagination {
-                margin-top: 1vh;
-            }
-
             .isi-subtopik {
                 display: flex;
                 flex-direction: column;
                 align-items: center;
             }
 
-            .isi-subtopik img {
-                width: 70vw;
-            }
-
-            .isi-subtopik p {
-                font-size: 4.5vw;
-            }
-
             footer {
                 height: 10vh;
                 align-items: center;
+            }
+
+            #deskripsiPetunjuk{
+                font-size: 12px;
+                margin: 0;
             }
 
             #petunjuk {
@@ -336,10 +337,44 @@ html,
                 height: 4vh;
                 width: 20vw;
                 background-color: #1EA2F6;
-                font-size: 3vw;
+                font-size: 12px;
+                margin-bottom: 10px;
             }
 
             .content img {
-                width: 70vw;
+                margin-top: 5vh;
+                width: 45vw;
             }
+
+            .isi-subtopik p {
+                font-size: 14px; /* 4vw kalo mau bagus di hp */
+                margin-top: 5vh;
+                margin-left: 5vw;
+                margin-right: 5vw;
+            }
+
+            #no-materi{
+                margin-top: 7vh;
+            }
+
+            .question {
+                font-size: 1em;
+                margin-bottom: 10px;
+            }
+
+            .answer-slot div,
+            .choices div {
+                padding: 5px;
+                margin: 3px;
+                font-size: 1em;
+            }
+
+            .pernyataan{
+                font-size: 12px;
+            }
+
+            .pertanyaan-container{
+                margin-top: 20px;
+            }
+            
         }
